@@ -380,6 +380,7 @@ bool CGUIWindow::Load(const TiXmlElement* pRootElement, RESOLUTION resToUse)
   m_bRelativeCoords = false;
   m_iPosX = m_iPosY = m_dwWidth = m_dwHeight = 0;
   m_iOverlayAllowed = -1;   // Use parent or previous window's state
+  m_coordsRes = resToUse;
 
   VECREFERENCECONTOLS referencecontrols;
   IVECREFERENCECONTOLS it;
@@ -544,8 +545,8 @@ void CGUIWindow::Render()
   if (!m_WindowAllocated) return;
 
   // calculate necessary scalings
-  float fFromWidth = (float)g_settings.m_ResInfo[g_guiSettings.m_LookAndFeelResolution].iWidth;
-  float fFromHeight = (float)g_settings.m_ResInfo[g_guiSettings.m_LookAndFeelResolution].iHeight;
+  float fFromWidth = (float)g_settings.m_ResInfo[m_coordsRes].iWidth;
+  float fFromHeight = (float)g_settings.m_ResInfo[m_coordsRes].iHeight;
   float fToWidth = (float)g_settings.m_ResInfo[g_graphicsContext.GetVideoResolution()].iWidth;
   float fToHeight = (float)g_settings.m_ResInfo[g_graphicsContext.GetVideoResolution()].iHeight;
   float fScaleX = fToWidth / fFromWidth;
