@@ -691,6 +691,9 @@ bundler xbelogo\saveimage.rdf -o xbelogo\saveimage.xbx
 					RelativePath=".\xbmc\AutoSwitch.h">
 				</File>
 				<File
+					RelativePath=".\xbmc\BackgroundInfoLoader.cpp">
+				</File>
+				<File
 					RelativePath=".\xbmc\ButtonTranslator.cpp">
 				</File>
 				<File
@@ -773,6 +776,9 @@ bundler xbelogo\saveimage.rdf -o xbelogo\saveimage.xbx
 				</File>
 				<File
 					RelativePath=".\xbmc\Picture.cpp">
+				</File>
+				<File
+					RelativePath=".\xbmc\PictureThumbLoader.cpp">
 				</File>
 				<File
 					RelativePath=".\xbmc\Profile.cpp">
@@ -1034,6 +1040,9 @@ bundler xbelogo\saveimage.rdf -o xbelogo\saveimage.xbx
 			</File>
 			<File
 				RelativePath=".\xbmc\Autorun.h">
+			</File>
+			<File
+				RelativePath=".\xbmc\BackgroundInfoLoader.h">
 			</File>
 			<File
 				RelativePath=".\xbmc\BuddyItem.h">
@@ -1381,10 +1390,10 @@ bundler xbelogo\saveimage.rdf -o xbelogo\saveimage.xbx
 				RelativePath=".\xbmc\cores\ModPlayer.h">
 			</File>
 			<File
-				RelativePath=".\xbmc\cores\mplayer\mplayer.h">
+				RelativePath=".\xbmc\cores\MPlayer.h">
 			</File>
 			<File
-				RelativePath=".\xbmc\cores\MPlayer.h">
+				RelativePath=".\xbmc\cores\mplayer\mplayer.h">
 			</File>
 			<File
 				RelativePath=".\xbmc\utils\MusicAlbumInfo.h">
@@ -1439,6 +1448,9 @@ bundler xbelogo\saveimage.rdf -o xbelogo\saveimage.xbx
 			</File>
 			<File
 				RelativePath=".\xbmc\Picture.h">
+			</File>
+			<File
+				RelativePath=".\xbmc\PictureThumbLoader.h">
 			</File>
 			<File
 				RelativePath=".\xbmc\cores\PlayerCoreFactory.h">
@@ -2146,10 +2158,10 @@ bundler xbelogo\saveimage.rdf -o xbelogo\saveimage.xbx
 					RelativePath=".\xbmc\cores\sidplayer\audio\AudioDrv.h">
 				</File>
 				<File
-					RelativePath=".\xbmc\cores\sidplayer\config.h">
+					RelativePath=".\xbmc\cores\sidplayer\audio\config.h">
 				</File>
 				<File
-					RelativePath=".\xbmc\cores\sidplayer\audio\config.h">
+					RelativePath=".\xbmc\cores\sidplayer\config.h">
 				</File>
 				<File
 					RelativePath=".\xbmc\cores\sidplayer\IniConfig.cpp">
